--- a/references.bib
+++ b/references.bib
@@ -1468,6 +1468,27 @@
   year		= {1995}
 }
 
+@article{ollila2022,
+  title={Modern web frameworks: A comparison of rendering performance},
+  author={Ollila, Risto and M{\"a}kitalo, Niko and Mikkonen, Tommi},
+  journal={Journal of Web Engineering},
+  volume={21},
+  number={3},
+  pages={789--813},
+  year={2022},
+  publisher={River Publishers}
+}
+
+
+@misc{bun2025,
+	title = {{Bun}},
+	journal = {Bun},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 13. Mar. 2025]},
+	url = {https://bun.sh}
+}
+
 @Manual{shiny2024,
     title = {shiny: Web Application Framework for R},
     author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
