--- a/references.bib
+++ b/references.bib
@@ -2769,6 +2769,33 @@
   url		= {https://react.dev}
 }
 
+@misc{angular2025,
+	title = {Angular},
+	author = {Google},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 14. Mar. 2025]},
+	url = {https://angular.dev/guide/signals}
+}
+
+@misc{knockout2019,
+	title = {{Knockout : Home}},
+	author = {{knockoutjs}},
+	year = {2019},
+	month = dec,
+	note = {[Online; accessed 2. Aug. 2024]},
+	url = {https://knockoutjs.com}
+}
+
+@misc{solid2024,
+	title = {SolidJS},
+	author = {{Solid Core Team}},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 2. Aug. 2024]},
+	url = {https://www.solidjs.com}
+}
+
 @InProceedings{	  reda2018,
   title		= {Graphical perception of continuous quantitative maps: the
 		  effects of spatial frequency and colormap design},
@@ -3231,6 +3258,35 @@
   month		= aug,
   note		= {[Online; accessed 2. Aug. 2024]},
   url		= {https://svelte.dev}
+}
+
+@misc{svelte2025,
+	title = {{Introducing runes}},
+	author = {{Rich Harris and the Svelte Core Team}},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 14. Mar. 2025]},
+	url = {https://svelte.dev/blog/runes}
+}
+
+@misc{leptos2025,
+	title = {{Home - Leptos}},
+	author = {{Leptos Core Team}},
+	year = {2025},
+	month = jan,
+	note = {[Online; accessed 14. Mar. 2025]},
+	url = {https://leptos.dev}
+}
+
+@misc{carniato2023,
+	author = {{ Ryan Carniato }},
+	title = {{Revolutionary Signals}},
+	journal = {YouTube},
+	year = {2023},
+	month = may,
+	publisher = {Youtube},
+	note = {[Online; accessed 14. Mar. 2025]},
+	url = {https://www.youtube.com/watch?v=Jp7QBjY5K34&t}
 }
 
 @Article{	  swayne1998,
@@ -3833,6 +3889,7 @@
   note		= {[Online; accessed 7. Nov. 2024]},
   url		= {https://www.youtube.com/watch?v=glYq-dvgby4}
 }
+
 
 @Misc{		  vaneerd2023,
   author	= {Van Eerd, Tony},
