--- a/system.Rmd
+++ b/system.Rmd
@@ -256,7 +256,7 @@ This section describes the actual platform used to produce and manipulate intera
 
 Key concepts are explained via example code chunks. All of these represent valid TypeScript code, and selected examples are even evaluated, using the [Bun](https://bun.sh/) runtime [@bun2025]. The reason why TypeScript was chosen over R is that many of the examples are much clearer with explicit type signatures. Further, since `plotscape` is written in TypeScript, many of the examples are taken directly from the codebase, albeit sometimes modified for consistency or conciseness.
 
-A note on the coding style used in the examples. Many of the code examples use TypeScript's `namespace` feature to bundle relevant functionality together, similar to how a `class` bundles data and behaviour together in object-orient programming (OOP), however, unlike in OOP, the namespace serves purely as a container for the functinality unlike class which has to be instantiated. Further, alongside the namespace, many examples also include a type (`interface`) of the same name. TypeScript allows type and value overloading, such that a type (e.g. `interface Foo {}`) and a runtime variable (`const Foo = 123`) with the same name can exist simultaneously, within the same scope. Namespaces are runtime variables and so they do not clash with types names. 
+A note on the coding style used in the examples. Many of the code examples use TypeScript's `namespace` feature to bundle related functionality together, similar to how a class bundles data and behaviour together in object-orient programming (OOP), however, unlike in OOP, the namespace serves purely as a container for the functionality unlike a class which has to be instantiated^[I.e. I use `namespace` like a class with all static methods and properties.]. Further, alongside the namespace, many examples also include a type (`interface`) of the same name. TypeScript allows type and value overloading, such that a type (e.g. `interface Foo {}`) and a runtime variable (`const Foo = 123`) with the same name can exist simultaneously, within the same scope. Namespaces are runtime variables and so they do not clash with types names. 
 
 This type-namespace style may seem like object-oriented programming (OOP) with extra steps, i.e. where someone might write `const foo = new Foo(); const bar = foo.bar()`, I write `const foo = Foo.create(); const bar = Foo.bar(foo)`, however, I did choose this style for a reason. First, thanks to TypeScript's structural typing, the functions exported from a namespace can be used with *any* variables with matching type signature, not just class instances, and this greatly increases the reusability of the code. Second, this approach also promotes functions that operate on plain data, which simplifies reasoning: data and code can be considered separately, and one can exist perfectly fine in the absence of the other^[This also makes some examples easier to read, since all of the variables used in a function's body are declared in the signature; one does not have to scroll all the way up to the top of the class declaration to find the properties used inside the method's body.]. Finally, this data-oriented approach also avoids a hidden cost of OOP: to support runtime polymorphism, class instances have to store pointers to virtual method tables, increasing their size and the potential for cache misses. Plain data structures are often more performant when polymorphism is not required, and in the specific situations where it is, alternative runtime dispatch methods can still be implemented in other ways. Thus, for these reasons, I chose to use this style when implementing `plotscape` and use it here as well for consistency. 
 
@@ -334,53 +334,70 @@ The VDOM provides a simple and convenient solution to reactive graph challenges 
 
 #### Signals
 
-An alternative approach 
+Another approach to reactivity that has been steadily gaining traction over the recent years, particularly within the web ecosystem, are signals (also known as fine-grained reactivity). Popularized by frameworks such Knockout [@knockout2019] and more recently Solid JS [@solid2024], this approach has recently seen a wave adoptions by many other frameworks including Svelte [@svelte2024] and Angular [@angular2025], and has even seen adoption outside of the JavaScript ecosystem, such as in the Rust-based framework Leptos [@leptos2025].
+
+Signal-based reactivity is built around a core pair of primitives: signals and effects. Signals are reactive values which keep track of their listeners, similar to the `Observer` pattern (Section \@ref(observer)). However, unlike `Observer`s, signals do not need to be subscribed to manually. Instead, listeners automatically subscribe to signals by accessing them, which is where effects come in. Effects are side-effect-causing functions which respond to signal changes, typically by updating the UI, and play a key role in the signal-based automatic subscription model.
+
+While signal-based reactivity might appear complex, its basic implementation is surprisingly straightforward. The following example is based on a presentation by Ryan Carniato, the creator of Solid JS [-@carniato2023]:
 
 ```{ts}
-type EffectFn = () => void;
-const currentEffects = [] as EffectFn[]; // A stack of effects
+export namespace Signal {
+  export function create<T>(x: T): [() => T, (value: T) => void] {
+    // A set of listeners, similar to Observable
+    const listeners = new Set<() => void>();
 
-function createSignal<T>(x: T): [() => T, (value: T) => void] {
-  const listeners = new Set<EffectFn>();
+    function get(): T {
+      listeners.add(Effect.getCurrent());
+      return x;
+    }
 
-  function get(): T {
-    // Add the topmost effect on the stack to listeners
-    listeners.add(currentEffects[currentEffects.length - 1]);
-    return x;
+    function set(value: T) {
+      x = value;
+      for (const l of listeners) l();
+    }
+
+    // Returns a getter-setter pair
+    return [get, set];
   }
-
-  function set(value: T) {
-    x = value;
-    // Call listeners, like in Observer
-    for (const l of listeners) l(); 
-  }
-
-  return [get, set];
 }
 
-function createEffect(effectfn: EffectFn) {
-  function call() {
-    currentEffects.push(call); // Push effect onto stack
-    effectfn();                // Call it, registering listeners
-    currentEffects.pop();      // Pop effect off the stack
+export namespace Effect {
+  const effectStack = [] as (() => void)[]; // A stack of effects
+
+  export function getCurrent(): () => void {
+    return effectStack[effectStack.length - 1];
   }
 
-  call();
+  export function create(effectfn: () => void) {
+    function execute() {
+      effectStack.push(execute);  // Pushes itself onto the stack
+      effectfn();                 // Runs the effect
+      effectStack.pop();          // Pops itself off the stack
+    }
+
+    execute();
+  }
 }
 
-const [price, setPrice] = createSignal(100);
-const [tax, setTax] = createSignal(0.15);
+const [price, setPrice] = Signal.create(100);
+const [tax, setTax] = Signal.create(0.15);
 const priceWithTax = () => Math.round(price() * (1 + tax()) * 100) / 100;
+// ^ Derived values automatically become signals as well
 
-createEffect(() =>
+Effect.create(() =>
   console.log(
-    `The current price is ${price()} (${priceWithTax()} with ${tax()}% tax)`
+    `The current price is` +
+      `${priceWithTax()}` +
+      `(${price()} before ${tax() * 100}% tax)`
   )
 );
 
 setPrice(200);
 setTax(0.12);
 ```
+
+The key detail to notice is the presence of the global stack of effects. Whenever an effect is called, it first pushes itself onto the stack. It then executes, accessing any signals it needs along the way. These signals in turn register the effect as a listener, by accessing it as the top-most element of the effect stack. When the effect is done executing, it pops itself off the stack. Now, whenever one of the accessed signals changes, the effect re-runs again. Crucially, making a derived reactive value is as simple as writing a callback: if an effect calls a function using a signal, it also automatically subscribes to that signal (see the example of `priceWithTax()` above). Importantly, the effect subscribes *only* to this signal and not the derived value itself. In other words, effects only ever subscribe to the leaf nodes of the reactive graph (signals). Derived values computed on the fly (and, if necessary, can be easily memoized^[Memoizing a derived value can be done by creating a new signal and an effect that runs when the original value gets updated.]), and event ordering is simply managed via the runtime call stack.
+
 
 #### Final choice of reactivity model {#reactivity-solution}
 
